# a-test-automation

./: .env.test  .gitignore  LICENSE  README.md  bitbucket-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt
src/a_test_automation/: __init__.py  ai_client.py  config.py
src/a_test_automation/pages/: __init__.py
tests/: conftest.py
tests/ai/: test_accuracy.py  test_safety.py
tests/api/: test_public_api.py
tests/pages/: login_page.py
tests/ui/: test_login.py
tests/utils/: config.py
